extra/tree-sitter-neon/grammar.js
    source_file: ($) => repeat($._declaration),

    // ---- comments -------------------------------------------------------
    // `///` attaches to what follows; `////` is an ordinary line comment.
    // Block comments nest, which no regex can express -- see src/scanner.c.
    line_comment: (_) => token(choice(seq('//', /[^\/\n][^\n]*/), '//', seq('///', /\/[^\n]*/))),
    doc_comment: (_) => token(prec(1, choice(seq('///', /[^\/\n][^\n]*/), '///'))),

    // ---- declarations ---------------------------------------------------

    _declaration: ($) =>
      choice(
        $.function_declaration,
        $.record_declaration,
        $.protocol_declaration,
        $.marker_declaration,
        $.impl_declaration,
        $.mu_type_declaration,
        $.type_alias_declaration,
        $.newtype_declaration,
        $.use_declaration,
        $.module_declaration,
        $.const_declaration,
        $.test_declaration,
      ),

    // `@name` or `@name("literal")`. The argument is a plain string, never an
    // expression -- parser/mod.rs `annotations`.
    annotation: ($) =>
      seq('@', field('name', $.identifier), optional(seq('(', field('argument', $.string), ')'))),

    function_declaration: ($) =>
      seq(
        repeat($.annotation),
        'fn',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('parameters', $.parameters),
        // `throws E` comes before `->` and must not swallow it.
        optional(field('throws', $.throws_clause)),
        optional(seq('->', field('return_type', $._type))),
        optional(field('where', $.where_clause)),
        // Optional: a protocol method or an `@native` fn may stop at the signature.
        optional(field('body', $.block)),
      ),

    type_parameters: ($) => seq('[', commaSep1($.identifier), optional(','), ']'),

    parameters: ($) => seq('(', optional(seq(commaSep1($.parameter), optional(','))), ')'),

    parameter: ($) => seq(field('name', $.identifier), ':', field('type', $._type)),

    throws_clause: ($) => seq('throws', field('type', $._throws_type)),

    where_clause: ($) => seq('where', commaSep1($.where_bound)),

    where_bound: ($) => seq(field('parameter', $.identifier), ':', field('bound', $._type)),

    record_declaration: ($) =>
      seq(
        repeat($.annotation),
        optional('opaque'),
        'record',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        field('body', $.field_declaration_list),
      ),

    field_declaration_list: ($) =>
      seq('{', optional(seq(commaSep1($.field_declaration), optional(','))), '}'),

    field_declaration: ($) => seq(field('name', $.identifier), ':', field('type', $._type)),

    // `marker Ord` -- a bound with no methods.
    marker_declaration: ($) => seq(repeat($.annotation), 'marker', field('name', $.identifier)),

    protocol_declaration: ($) =>
      seq(
        repeat($.annotation),
        'protocol',
        field('name', $.identifier),
        'for',
        field('subject', $.protocol_subject),
        optional(field('where', $.where_clause)),
        field('body', $.protocol_body),
      ),

    // `for T` or `for C[_]` -- a type, or a type constructor of some arity.
    protocol_subject: ($) =>
      seq(field('name', $.identifier), optional(seq('[', commaSep1('_'), ']'))),

    protocol_body: ($) => seq('{', repeat($.function_declaration), '}'),

    impl_declaration: ($) =>
      seq(
        repeat($.annotation),
        // Contextual: `orphan` is only special immediately before `impl`.
        optional('orphan'),
        'impl',
        optional(field('type_parameters', $.type_parameters)),
        field('protocol', choice($.path, $.identifier)),
        'for',
        field('target', $._type),
        field('body', $.impl_body),
      ),

    impl_body: ($) => seq('{', repeat($.function_declaration), '}'),

    type_alias_declaration: ($) =>
      seq(
        'type',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        '=',
        field('value', $._type),
      ),

    mu_type_declaration: ($) =>
      seq(
        'mu',
        'type',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        '=',
        field('value', $._type),
      ),

    newtype_declaration: ($) =>
      seq(
        'newtype',
        field('name', $.identifier),
        optional(field('type_parameters', $.type_parameters)),
        '=',
        field('value', $._type),
      ),

    use_declaration: ($) => seq('use', field('tree', $.use_tree), optional(';')),

    // `a::b::c`, `a::b as z`, `a::*`, `a::{ b, c as d, sub::* }`.
    // Flattened deliberately: a separate `path` rule here would need two tokens
    // of lookahead to decide whether a segment is a prefix or the leaf.
    use_tree: ($) =>
      seq(
        repeat(seq(field('prefix', $.identifier), '::')),
        choice(
          field('glob', '*'),
          field('group', $.use_group),
          seq(field('name', $.identifier), optional(seq('as', field('alias', $.identifier)))),
        ),
      ),

    use_group: ($) => seq('{', optional(seq(commaSep1($.use_tree), optional(','))), '}'),

    module_declaration: ($) =>
      seq(
        repeat($.annotation),
        optional('internal'),
        'mod',
        field('name', $.identifier),
        field('body', $.module_body),
      ),

    module_body: ($) => seq('{', repeat($._declaration), '}'),

    const_declaration: ($) =>
      seq(
        'const',
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        '=',
        field('value', $._expression),
        optional(';'),
      ),

    test_declaration: ($) =>
      seq(choice('test', 'bench'), field('name', $.string), field('body', $.block)),

    // ---- types ----------------------------------------------------------

    _type: ($) =>
      choice(
        $.union_type,
        $.intersection_type,
        $.negated_type,
        $.function_type,
        $.tuple_type,
        $.parenthesized_type,
        $.structural_type,
        $.generic_type,
        $.path,
        $.identifier,
        $.atom,
        $.any_type,
        $.null,
      ),

    union_type: ($) => prec.left(PREC.union, seq($._type, '|', $._type)),
    negated_type: ($) => prec.right(PREC.negate, seq('!', $._type)),

    // `(A, B) throws E -> C`. The codomain binds to the arrow, so a `throws`
    // with no arrow is an error rather than a tuple that ate its clause.
    function_type: ($) =>
      prec.right(
        seq(
          field('parameters', $.function_type_parameters),
          optional(field('throws', $.throws_clause)),
          '->',
          field('return_type', $._type),
        ),
      ),

    function_type_parameters: ($) => seq('(', optional(seq(commaSep1($._type), optional(','))), ')'),

    // `()` is unit and `(A, B)` a tuple; there is nothing at arity one, so
    // `(A)` is a grouping and `(A,)` is an error the compiler reports.
    tuple_type: ($) =>
      choice(
        seq('(', ')'),
        seq('(', $._type, ',', ')'),
        seq('(', $._type, repeat1(seq(',', $._type)), optional(','), ')'),
      ),

    parenthesized_type: ($) => seq('(', $._type, ')'),

    structural_type: ($) =>
      seq('{', optional(seq(commaSep1($.field_declaration), optional(','))), '}'),

    // `x as List[i64]` -- the type grabs its arguments greedily, as
    // `atomic_type`'s `named` does; the `[` is never an index on the cast.
    generic_type: ($) =>
      prec(20, seq(field('name', choice($.path, $.identifier)), field('arguments', $.type_arguments))),

    type_arguments: ($) => seq('[', optional(seq(commaSep1($._type), optional(','))), ']'),

    // A turbofish and an index are the same tokens until the `(` after the `]`.
    // Restricting the arguments to types that cannot start like a parenthesised
    // expression keeps that ambiguity to the one case GLR can actually settle:
    // a bare name. `f[(i64) -> str]()` is the casualty; write a named alias.
    turbofish_arguments: ($) => seq('[', commaSep1($._simple_type), optional(','), ']'),

    _simple_type: ($) =>
      choice(
        $.simple_union_type,
        $.simple_intersection_type,
        $.simple_negated_type,
        $.generic_type,
        $.path,
        $.identifier,
        $.atom,
        $.any_type,
        $.null,
      ),

    _throws_type: ($) =>
      choice(
        $.throws_union_type,
        $.throws_intersection_type,
        $.throws_negated_type,
        $.throws_tuple_type,
        $.throws_parenthesized_type,
        $.structural_type,
        $.generic_type,
        $.path,
        $.identifier,
        $.atom,
        $.any_type,
        $.null,
      ),

    block: ($) => seq('{', repeat($._statement), optional(field('tail', $._expression)), '}'),

    _statement: ($) =>
      choice($.let_statement, $.assignment_statement, $.expression_statement),

    // Semicolons are optional throughout: the parser writes `.or_not()` on
    // every one of them.
    let_statement: ($) =>
      seq(
        'let',
        field('pattern', $._pattern),
        optional(seq(':', field('type', $._type))),
        '=',
        field('value', $._expression),
        optional(';'),
      ),

    // Bindings rebind; there is no `mut`. `p.f = e` and `xs[i] = e` parse here
    // so the compiler can reject them with advice rather than a syntax error.
    assignment_statement: ($) =>
      seq(field('left', $._expression), '=', field('right', $._expression), optional(';')),

    expression_statement: ($) =>
      choice(
        seq($._expression, ';'),
        // Above the whole binary ladder, or `-` would win the tie and
        // `if a {} else {}` followed by `-1;` would silently become one
        // subtraction -- the exact bug parser/mod.rs calls out.
        prec.dynamic(PREC.statement_block, seq($._expression_ending_with_block, optional(';'))),
      ),

    // A block-like expression at the START of a statement is a statement, not
    // the left operand of whatever follows -- otherwise `if a {} else {}`
    // followed by a line beginning `-1;` becomes one subtraction.
    _expression_ending_with_block: ($) =>
      choice($.if_expression, $.match_expression, $.loop_expression, $.while_expression, $.for_expression, $.block),

    // ---- patterns -------------------------------------------------------

    _pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.is_pattern,
        $.record_pattern,
        $.tuple_pattern,
        $.literal_pattern,
        $.identifier,
      ),

    wildcard_pattern: (_) => '_',

    is_pattern: ($) => seq('is', field('type', $._type)),

    record_pattern: ($) =>
      seq(
        optional(field('path', choice($.path, $.identifier))),
        '{',
        optional(seq(commaSep1($.field_pattern), optional(','))),
        optional('..'),
        '}',
      ),

    // `x` alone binds the field to `x`.
    field_pattern: ($) =>
      seq(field('name', $.identifier), optional(seq(':', field('pattern', $._pattern)))),

    tuple_pattern: ($) =>
      choice(
        seq('(', ')'),
        seq('(', $._pattern, ',', ')'),
        seq('(', $._pattern, repeat1(seq(',', $._pattern)), optional(','), ')'),
      ),

    literal_pattern: ($) =>
      choice(
        $.integer,
        $.float,
        $.rune,
        $.atom,
        $.string,
        $.boolean,
        $.null,
        seq('-', choice($.integer, $.float)),
      ),

    // ---- expressions ----------------------------------------------------

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.try_expression,
        $.call_expression,
        $.index_expression,
        $.field_expression,
        $.is_expression,
        $.as_expression,
        $.lambda_expression,
        $.record_literal,
        $.list_expression,
        $.tuple_expression,
        $.unit_expression,
        $.parenthesized_expression,
        $.if_expression,
        $.match_expression,
        $.loop_expression,
        $.while_expression,
        $.for_expression,
        $.block,
        $.break_expression,
        $.continue_expression,
        $.return_expression,
        $.throw_expression,
        $.assert_expression,
        $.string,
        $.integer,
        $.float,
        $.rune,
        $.atom,
        $.boolean,
        $.null,
        $.path,
        $.identifier,
      ),

    binary_expression: ($) => {
      // ops::BINARY_OPS, verbatim. Every binary operator is left-associative.
      const table = [
        [PREC.orelse, 'orelse'],
        [PREC.or, 'or'],
        [PREC.and, 'and'],
        [PREC.compare, choice('==', '!=', '<=', '>=', '<', '>')],
        [PREC.pipe, '|>'],
        [PREC.bor, 'bor'],
        [PREC.bxor, 'bxor'],
        [PREC.band, 'band'],
        [PREC.shift, choice('bsl', 'bsr')],
        [PREC.add, choice('+', '-')],
        [PREC.multiply, choice('*', '/', '%')],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            precedence,
            seq(
              field('left', $._expression),
              field('operator', operator),
              field('right', $._expression),
            ),
          ),
        ),
      );
    },

    unary_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(field('operator', choice('-', '!', 'bnot')), field('operand', $._expression)),
      ),

    // `try` binds at the unary level, not the full expression: with the full
    // parser `try? get(m, k) orelse 30` becomes `try? (get(m, k) orelse 30)`,
    // an orelse on a non-nullable type, so the default silently never applies.
    try_expression: ($) =>
      prec.right(
        PREC.try,
        seq(
          'try',
          optional(field('form', choice('?', '!'))),
          field('body', $._expression),
          optional(field('catch', $.catch_clause)),
        ),
      ),

    catch_clause: ($) =>
      seq('catch', '(', field('binding', $.identifier), ')', field('body', $.block)),

    call_expression: ($) =>
      prec(
        PREC.postfix,
        seq(
          field('function', $._expression),
          // Turbofish: `f[i64](x)`.
          optional(field('type_arguments', $.turbofish_arguments)),
          field('arguments', $.arguments),
        ),
      ),

    arguments: ($) => seq('(', optional(seq(commaSep1($._expression), optional(','))), ')'),

    index_expression: ($) =>
      prec(PREC.postfix, seq(field('base', $._expression), '[', field('index', $._expression), ']')),

    field_expression: ($) =>
      prec(PREC.postfix, seq(field('base', $._expression), '.', field('field', $.identifier))),

    is_expression: ($) =>
      prec(PREC.postfix, seq(field('left', $._expression), 'is', field('type', $._type))),

    as_expression: ($) =>
      prec(PREC.postfix, seq(field('left', $._expression), 'as', field('type', $._type))),

    lambda_expression: ($) =>
      prec.right(seq(field('parameters', $.lambda_parameters), '=>', field('body', $._expression))),

    lambda_parameters: ($) =>
      seq('(', optional(seq(commaSep1($.lambda_parameter), optional(','))), ')'),

    lambda_parameter: ($) =>
      seq(field('name', $.identifier), optional(seq(':', field('type', $._type)))),

    // `Point { x: 1, ..base }`, or `{ x: 1 }` with no path.
    //
    // A path or at least one field is required. The compiler accepts a bare
    // `{}` as an empty record literal too, but that spelling is also an empty
    // block, and requiring content is what keeps the two apart here.
    field_initializer: ($) =>
      seq(field('name', $.identifier), ':', field('value', $._expression)),

    list_expression: ($) =>
      seq('[', optional(seq(commaSep1(choice($._expression, $.spread_element)), optional(','))), ']'),
