extra/tree-sitter-neon/test/corpus/ambiguities.txt
================================================================================
Turbofish takes the full type grammar, not a restricted subset
================================================================================

fn m() {
    let a = f[(A, B)](1);
    let b = f[{ a: i64 }](1);
    let c = f[(i64) -> str]();
    let d = f[(i64) throws E -> str](x);
    let e = f[!A | B, (C)](y);
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (call_expression
          (identifier)
          (turbofish_arguments
            (tuple_type
              (identifier)
              (identifier)))
          (arguments
            (integer))))
      (let_statement
        (identifier)
        (call_expression
          (identifier)
          (turbofish_arguments
            (structural_type
              (field_declaration
                (identifier)
                (identifier))))
          (arguments
            (integer))))
      (let_statement
        (identifier)
        (call_expression
          (identifier)
          (turbofish_arguments
            (function_type
              (function_type_parameters
                (identifier))
              (identifier)))
          (arguments)))
      (let_statement
        (identifier)
        (call_expression
          (identifier)
          (turbofish_arguments
            (function_type
              (function_type_parameters
                (identifier))
              (throws_clause
                (identifier))
              (identifier)))
          (arguments
            (identifier))))
      (let_statement
        (identifier)
        (call_expression
          (identifier)
          (turbofish_arguments
            (union_type
              (negated_type
                (identifier))
              (identifier))
            (parenthesized_type
              (identifier)))
          (arguments
            (identifier)))))))

================================================================================
Without a following call, the same brackets are still an index
================================================================================

fn m() {
    let a = xs[i];
    let b = xs[(i, j)];
    let c = m[{ a: 1 }];
    let d = m[{}];
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (index_expression
          (identifier)
          (identifier)))
      (let_statement
        (identifier)
        (index_expression
          (identifier)
          (tuple_expression
            (identifier)
            (identifier))))
      (let_statement
        (identifier)
        (index_expression
          (identifier)
          (record_literal
            (field_initializer
              (identifier)
              (integer)))))
      (let_statement
        (identifier)
        (index_expression
          (identifier)
          (record_literal))))))

================================================================================
A bare {} is an empty record literal, in value and in statement position
================================================================================

fn m() {
    let a = {};
    {};
    let b = 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (record_literal))
      (expression_statement
        (record_literal))
      (let_statement
        (identifier)
        (integer)))))

================================================================================
A brace with content in it is still a block
================================================================================

fn m() {
    let a = { { } };
    let b = { 1 };
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (block
          (record_literal)))
      (let_statement
        (identifier)
        (block
          (integer))))))

================================================================================
A block that is required by position stays a block, empty or not
================================================================================

fn m() {}

fn n() {
    if a {} else {}
    while b {}
    loop {}
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block))
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (if_expression
          (identifier)
          (block)
          (block)))
      (expression_statement
        (while_expression
          (identifier)
          (block)))
      (expression_statement
        (loop_expression
          (block))))))
