extra/tree-sitter-neon/test/corpus/control-flow.txt
================================================================================
If, else if and else
================================================================================

fn m() {
    if a { 1 } else if b { 2 } else { 3 }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (if_expression
          (identifier)
          (block
            (integer))
          (if_expression
            (identifier)
            (block
              (integer))
            (block
              (integer))))))))

================================================================================
A block-like expression at the start of a statement is a statement
================================================================================

fn m() {
    if a { 1 } else { 2 }
    -1;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (if_expression
          (identifier)
          (block
            (integer))
          (block
            (integer))))
      (expression_statement
        (unary_expression
          (integer))))))

================================================================================
Loop, while, for, break and continue
================================================================================

fn m() {
    loop { break 1; }
    while i < n { i = i + 1; }
    for x in range(0, 10) { continue; }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (loop_expression
          (block
            (expression_statement
              (break_expression
                (integer))))))
      (expression_statement
        (while_expression
          (binary_expression
            (identifier)
            (identifier))
          (block
            (assignment_statement
              (identifier)
              (binary_expression
                (identifier)
                (integer))))))
      (expression_statement
        (for_expression
          (identifier)
          (call_expression
            (identifier)
            (arguments
              (integer)
              (integer)))
          (block
            (expression_statement
              (continue_expression))))))))

================================================================================
Match with guards and every pattern shape
================================================================================

fn m() {
    match v {
        Point { x, y: 0 } => 1,
        (a, b) if a > b => 2,
        is str => 3,
        :ok => 4,
        -1 => 5,
        "lit" => 6,
        _ => 7,
    }
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (match_expression
          (identifier)
          (match_body
            (match_arm
              (record_pattern
                (identifier)
                (field_pattern
                  (identifier))
                (field_pattern
                  (identifier)
                  (literal_pattern
                    (integer))))
              (integer))
            (match_arm
              (tuple_pattern
                (identifier)
                (identifier))
              (binary_expression
                (identifier)
                (identifier))
              (integer))
            (match_arm
              (is_pattern
                (identifier))
              (integer))
            (match_arm
              (literal_pattern
                (atom))
              (integer))
            (match_arm
              (literal_pattern
                (integer))
              (integer))
            (match_arm
              (literal_pattern
                (string
                  (string_content)))
              (integer))
            (match_arm
              (wildcard_pattern)
              (integer))))))))

================================================================================
Try forms, catch, throw and orelse
================================================================================

fn m() {
    let a = try f(x);
    let b = try? get(m, k) orelse 30;
    let c = try! f(x);
    let d = try { a(); b() } catch (e) { throw e };
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (try_expression
          (call_expression
            (identifier)
            (arguments
              (identifier)))))
      (let_statement
        (identifier)
        (binary_expression
          (try_expression
            (call_expression
              (identifier)
              (arguments
                (identifier)
                (identifier))))
          (integer)))
      (let_statement
        (identifier)
        (try_expression
          (call_expression
            (identifier)
            (arguments
              (identifier)))))
      (let_statement
        (identifier)
        (try_expression
          (block
            (expression_statement
              (call_expression
                (identifier)
                (arguments)))
            (call_expression
              (identifier)
              (arguments)))
          (catch_clause
            (identifier)
            (block
              (throw_expression
                (identifier)))))))))

================================================================================
Comments, including nested block comments
================================================================================

/// A doc comment.
// A line comment.
/* outer /* inner */ still outer */
fn m() { show(/* inline */ 1); }

--------------------------------------------------------------------------------

(source_file
  (doc_comment)
  (line_comment)
  (block_comment)
  (function_declaration
    (identifier)
    (parameters)
    (block
      (expression_statement
        (call_expression
          (identifier)
          (arguments
            (block_comment)
            (integer)))))))
