extra/tree-sitter-neon/test/corpus/declarations.txt
================================================================================
Function with generics, throws, return type and where clause
================================================================================

@pure @native("neon_len")
fn len[T](xs: List[T], n: i64) throws IoError -> i64 where T: Ord {
    n
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (annotation
      (identifier))
    (annotation
      (identifier)
      (string
        (string_content)))
    (identifier)
    (type_parameters
      (identifier))
    (parameters
      (parameter
        (identifier)
        (generic_type
          (identifier)
          (type_arguments
            (identifier))))
      (parameter
        (identifier)
        (identifier)))
    (throws_clause
      (identifier))
    (identifier)
    (where_clause
      (where_bound
        (identifier)
        (identifier)))
    (block
      (identifier))))

================================================================================
Function signature with no body
================================================================================

@native("neon_str_len") fn len(s: str) -> i64

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (annotation
      (identifier)
      (string
        (string_content)))
    (identifier)
    (parameters
      (parameter
        (identifier)
        (identifier)))
    (identifier)))

================================================================================
Records, opaque records and structural types
================================================================================

record Point { x: i64, y: i64 }

opaque record Handle[T] { raw: T }

type Options = { verbose: bool, level: i64 }

--------------------------------------------------------------------------------

(source_file
  (record_declaration
    (identifier)
    (field_declaration_list
      (field_declaration
        (identifier)
        (identifier))
      (field_declaration
        (identifier)
        (identifier))))
  (record_declaration
    (identifier)
    (type_parameters
      (identifier))
    (field_declaration_list
      (field_declaration
        (identifier)
        (identifier))))
  (type_alias_declaration
    (identifier)
    (structural_type
      (field_declaration
        (identifier)
        (identifier))
      (field_declaration
        (identifier)
        (identifier)))))

================================================================================
Type aliases, mu types and newtypes
================================================================================

type Ordering = :lt | :eq | :gt

mu type F = null | (F) throws :err -> i64

newtype Meter = i64

--------------------------------------------------------------------------------

(source_file
  (type_alias_declaration
    (identifier)
    (union_type
      (union_type
        (atom)
        (atom))
      (atom)))
  (mu_type_declaration
    (identifier)
    (union_type
      (null)
      (function_type
        (function_type_parameters
          (identifier))
        (throws_clause
          (atom))
        (identifier))))
  (newtype_declaration
    (identifier)
    (identifier)))

================================================================================
Protocols, markers and impls
================================================================================

marker Ord

protocol Mappable for C[_] where C: Ord {
    fn map(c: C) -> C
}

orphan impl[T] std::fmt::Display for List[T] {
    fn to_string(v: List[T]) -> str { "list" }
}

--------------------------------------------------------------------------------

(source_file
  (marker_declaration
    (identifier))
  (protocol_declaration
    (identifier)
    (protocol_subject
      (identifier))
    (where_clause
      (where_bound
        (identifier)
        (identifier)))
    (protocol_body
      (function_declaration
        (identifier)
        (parameters
          (parameter
            (identifier)
            (identifier)))
        (identifier))))
  (impl_declaration
    (type_parameters
      (identifier))
    (path
      (identifier)
      (identifier)
      (identifier))
    (generic_type
      (identifier)
      (type_arguments
        (identifier)))
    (impl_body
      (function_declaration
        (identifier)
        (parameters
          (parameter
            (identifier)
            (generic_type
              (identifier)
              (type_arguments
                (identifier)))))
        (identifier)
        (block
          (string
            (string_content)))))))

================================================================================
Modules, uses and consts
================================================================================

use std::io;
use std::collections::{ map, list as l, sub::* };
use std::string::*;

internal mod raw {
    const LIMIT: i64 = 10;
}

--------------------------------------------------------------------------------

(source_file
  (use_declaration
    (use_tree
      (identifier)
      (identifier)))
  (use_declaration
    (use_tree
      (identifier)
      (identifier)
      (use_group
        (use_tree
          (identifier))
        (use_tree
          (identifier)
          (identifier))
        (use_tree
          (identifier)))))
  (use_declaration
    (use_tree
      (identifier)
      (identifier)))
  (module_declaration
    (identifier)
    (module_body
      (const_declaration
        (identifier)
        (identifier)
        (integer)))))

================================================================================
Tests and benches
================================================================================

test "it adds" { assert_eq(1 + 1, 2); }

bench "it is fast" { assert(true); }

--------------------------------------------------------------------------------

(source_file
  (test_declaration
    (string
      (string_content))
    (block
      (expression_statement
        (assert_expression
          (arguments
            (binary_expression
              (integer)
              (integer))
            (integer))))))
  (test_declaration
    (string
      (string_content))
    (block
      (expression_statement
        (assert_expression
          (arguments
            (boolean)))))))
