extra/tree-sitter-neon/test/corpus/expressions.txt
================================================================================
Precedence: and binds tighter than or
================================================================================

fn m() { let z = a or b and c; }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (binary_expression
          (identifier)
          (binary_expression
            (identifier)
            (identifier)))))))

================================================================================
Precedence: binary operators are left associative
================================================================================

fn m() { let z = 1 - 2 - 3; }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (binary_expression
          (binary_expression
            (integer)
            (integer))
          (integer))))))

================================================================================
Precedence: pipe binds tighter than comparison
================================================================================

fn m() { let z = a |> b == c; }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (binary_expression
          (binary_expression
            (identifier)
            (identifier))
          (identifier))))))

================================================================================
Precedence: postfix binds tighter than prefix
================================================================================

fn m() { let z = -x.f; }

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (unary_expression
          (field_expression
            (identifier)
            (identifier)))))))

================================================================================
Calls, turbofish, indexing and field access
================================================================================

fn m() {
    let a = identity[i64](5);
    let b = xs[0];
    let c = p.x.y;
    let d = std::io::println("hi");
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (call_expression
          (identifier)
          (turbofish_arguments
            (identifier))
          (arguments
            (integer))))
      (let_statement
        (identifier)
        (index_expression
          (identifier)
          (integer)))
      (let_statement
        (identifier)
        (field_expression
          (field_expression
            (identifier)
            (identifier))
          (identifier)))
      (let_statement
        (identifier)
        (call_expression
          (path
            (identifier)
            (identifier)
            (identifier))
          (arguments
            (string
              (string_content))))))))

================================================================================
Casts and type tests
================================================================================

fn m() {
    let a = x as f64;
    let b = v is Point;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (as_expression
          (identifier)
          (identifier)))
      (let_statement
        (identifier)
        (is_expression
          (identifier)
          (identifier))))))

================================================================================
Lambdas
================================================================================

fn m() {
    let f = (x: i64, y) => x + y;
    let g = () => 1;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (lambda_expression
          (lambda_parameters
            (lambda_parameter
              (identifier)
              (identifier))
            (lambda_parameter
              (identifier)))
          (binary_expression
            (identifier)
            (identifier))))
      (let_statement
        (identifier)
        (lambda_expression
          (lambda_parameters)
          (integer))))))

================================================================================
Literals, tuples, lists and record literals
================================================================================

fn m() {
    let a = [1, 2, ..rest];
    let b = (1, "x", :ok);
    let c = Point { x: 1, ..base };
    let d = { verbose: true };
    let e = 0xff;
    let f = 1_000.5e-3;
    let g = 'a';
    let h = null;
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (list_expression
          (integer)
          (integer)
          (spread_element
            (identifier))))
      (let_statement
        (identifier)
        (tuple_expression
          (integer)
          (string
            (string_content))
          (atom)))
      (let_statement
        (identifier)
        (record_literal
          (identifier)
          (field_initializer
            (identifier)
            (integer))
          (identifier)))
      (let_statement
        (identifier)
        (record_literal
          (field_initializer
            (identifier)
            (boolean))))
      (let_statement
        (identifier)
        (integer))
      (let_statement
        (identifier)
        (float))
      (let_statement
        (identifier)
        (rune))
      (let_statement
        (identifier)
        (null)))))

================================================================================
String interpolation, including a nested string and a record literal
================================================================================

fn m() {
    let s = "a #{f("b")} c #{Point { x: 1 }} \u{1F600}\n";
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    (identifier)
    (parameters)
    (block
      (let_statement
        (identifier)
        (string
          (string_content)
          (interpolation
            (call_expression
              (identifier)
              (arguments
                (string
                  (string_content)))))
          (string_content)
          (interpolation
            (record_literal
              (identifier)
              (field_initializer
                (identifier)
                (integer))))
          (string_content)
          (escape_sequence)
          (escape_sequence))))))
